--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,4 +11,4 @@ jobs:
         with:
           root_file: main.tex
       - name: ls
-        run: ls -la /github/workspace
+        run: ls -la /root
