--- a/.github/ workflows/upload.yml
+++ b/.github/ workflows/upload.yml
@@ -1,4 +1,5 @@
 on:
+  release:
   push:
     # Sequence of patterns matched against refs/tags
     tags:
@@ -47,4 +48,4 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./root/main.pdf
           asset_name: Tepdfst. 
-  dd        asset_content_type: application/zip
+          asset_content_type: application/zip
