--- a/.github/workflows/uploadRelease.yml
+++ b/.github/workflows/uploadRelease.yml
@@ -1,8 +1,8 @@
 on:
- page_build:
-  release:
-    types: # This configuration does not affect the page_build event above
-      - created
+  push:
+    # Sequence of patterns matched against refs/tags
+    tags:
+    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 name: Upload Release Asset
 
