--- a/.github/workflows/texBuild.yml
+++ b/.github/workflows/texBuild.yml
@@ -1,37 +1,43 @@
-# This is a basic workflow to help you get started with Actions
-
 name: texBuild
 
-# Controls when the action will run. Triggers the workflow on push or pull request 
-# events but only for the master branch
 on:
   push:
-    branches: [ master ]
+    branches:
+      - '*'
   pull_request:
-    branches: [ master ]
+    branches:
+      - '*'
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    # Runs a single command using the runners shell
-    - name: Install dependencies
-      run: |
-        sudo apt update
-        sudo apt install texlive-base texlive-lang-german texlive-latex-extra texlive-bibtex-extra
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install texlive-base texlive-lang-german texlive-latex-extra texlive-bibtex-extra biber texlive-fonts-recommended
 
-    # Runs a set of commands using the runners shell
-    - name: Build Latex
-      run: |
-        cd $GITHUB_WORKSPACE
-        sudo pdflatex -file-line-error -interaction=nonstopmode -synctex=1 -output-format=pdf -output-directory=/root  main.tex
-    - name: Show build files
-      run: sudo ls -la /root
+      - name: Build Latex
+        run: |
+          cd $GITHUB_WORKSPACE
+          sudo pdflatex -file-line-error -interaction=nonstopmode -halt-on-error -output-format=pdf  $GITHUB_WORKSPACE/main.tex
+          sudo biber --input-directory=$GITHUB_WORKSPACE --input-directory=./ main
+          sudo pdflatex -file-line-error -interaction=nonstopmode -halt-on-error -output-format=pdf  $GITHUB_WORKSPACE/main.tex
+
+      - name: Check built file
+        run: sudo ls -la main.pdf
+
+      - name: upload latest Build
+        id: upload-release-asset
+          uses: actions/upload-release-asset@v1
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          with:
+            upload_url: 'https://uploads.github.com/repos/Lukas-Heiligenbrunner/LatexActionTest/releases/assets/latest-build'
+            asset_path: ./main.pdf
+            asset_name: Diplomarbeit.pdf
+            asset_content_type: application/pdf
