--- a/.github/workflows/uploadRelease.yml
+++ b/.github/workflows/uploadRelease.yml
@@ -1,10 +1,9 @@
+name: Publish Release
+
 on:
   push:
-    # Sequence of patterns matched against refs/tags
     tags:
-    - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
-
-name: Upload Release Asset
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
   build:
@@ -13,16 +12,22 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install texlive-base texlive-lang-german texlive-latex-extra texlive-bibtex-extra
-      # Runs a set of commands using the runners shell
+          sudo apt install texlive-base texlive-lang-german texlive-latex-extra texlive-bibtex-extra biber texlive-fonts-recommended
+
       - name: Build Latex
         run: |
-          sudo pdflatex -file-line-error -interaction=nonstopmode -synctex=1 -output-format=pdf  $GITHUB_WORKSPACE/main.tex
-      - name: Show build files
-        run: sudo ls -la
+          sudo pdflatex -file-line-error -interaction=nonstopmode -halt-on-error -output-format=pdf  $GITHUB_WORKSPACE/main.tex
+          sudo biber --input-directory=$GITHUB_WORKSPACE --input-directory=./ main
+          sudo pdflatex -file-line-error -interaction=nonstopmode -halt-on-error -output-format=pdf  $GITHUB_WORKSPACE/main.tex
+          sudo pdflatex -file-line-error -interaction=nonstopmode -halt-on-error -output-format=pdf  $GITHUB_WORKSPACE/main.tex
+
+      - name: Check built file
+        run: sudo ls -la main.pdf
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
@@ -30,16 +35,18 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          release_name: Diplomarbeit ${{ github.ref }}
+          body: Bildkorrektur für Oberflächeninspektion
           draft: false
           prerelease: false
+
       - name: Upload Release Asset
-        id: upload-release-asset 
+        id: upload-release-asset
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps
           asset_path: ./main.pdf
-          asset_name: Main.pdf
+          asset_name: Diplomarbeit.pdf
           asset_content_type: application/pdf
