--- a/.github/workflows/texBuild.yml
+++ b/.github/workflows/texBuild.yml
@@ -38,10 +38,11 @@ jobs:
           path: main.pdf
       - name: upload latest Build
         id: upload-release-asset
-        uses: actions/upload-release-asset@v1
+        uses: Lukas-Heiligenbrunner/upload-release-asset@v0.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          release_id: 24358211
           upload_url: 'https://uploads.github.com/repos/Lukas-Heiligenbrunner/LatexActionTest/releases/24358211/assets?name=Diplomarbeit.pdf'
           asset_path: ./main.pdf
           asset_name: Diplomarbeit.pdf
