--- a/.github/workflows/texBuild.yml
+++ b/.github/workflows/texBuild.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: get ids
+        run: |
+          sudo apt update
+          sudo apt install curl
+          curl -vLJO -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/Lukas-Heiligenbrunner/LatexActionTest/releases/tags/latest-build'
+
       - name: Install dependencies
         run: |
           sudo apt update
