--- a/.github/workflows/texBuild.yml
+++ b/.github/workflows/texBuild.yml
@@ -20,8 +20,8 @@ jobs:
         run: |
           sudo apt update
           sudo apt install curl
-          curl -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/Lukas-Heiligenbrunner/LatexActionTest/releases/tags/latest-build'
-
+          id = curl -H 'Authorization: token ${{ secrets.GITHUB_TOKEN }}' 'https://api.github.com/repos/Lukas-Heiligenbrunner/LatexActionTest/releases/tags/latest-build' | grep "id" | head -n 1 | cut -c9-16
+          echo id is $id
       - name: Install dependencies
         run: |
           sudo apt update
